--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,7 +10,7 @@
 
 :root{
     /* ===== Colors ===== */
-    --primary-color: #1100ff;
+    --primary-color: #ffffff;
     --panel-color: rgb(255, 255, 255);
     --text-color: #000;
     --black-light-color: #2A384C;
